[gd_scene load_steps=19 format=3 uid="uid://d2d71ejjil1kp"]

[ext_resource type="Texture2D" uid="uid://wsefblrp1hg1" path="res://art/Teste/Characters/Free Chicken Sprites.png" id="1_exalh"]
[ext_resource type="Script" path="res://characters/npc_enemy.gd" id="1_xbdp6"]
[ext_resource type="Script" path="res://particles/DoesDamage.gd" id="2_2vgpq"]
[ext_resource type="Script" path="res://characters/damageable.gd" id="2_af5me"]
[ext_resource type="Texture2D" uid="uid://drco253cxf0xj" path="res://art/Teste/Objects/Egg_item.png" id="3_s72fp"]
[ext_resource type="Script" path="res://characters/CombatLifeController.gd" id="4_28gnd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0en68"]
radius = 3.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blfyr"]
size = Vector2(9, 8)

[sub_resource type="Animation" id="Animation_y58p1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3x0cw"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_s4br5"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1csb3"]
_data = {
"RESET": SubResource("Animation_y58p1"),
"idle": SubResource("Animation_3x0cw"),
"walk": SubResource("Animation_s4br5")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_65025"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a2si4"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i3tew"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_66yom"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_52iyi"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_cr6cv"]
states/idle/node = SubResource("AnimationNodeAnimation_65025")
states/idle/position = Vector2(334, 100)
states/walk/node = SubResource("AnimationNodeAnimation_a2si4")
states/walk/position = Vector2(477, 102)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_i3tew"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_66yom"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_52iyi")]

[node name="npc_enemy" type="CharacterBody2D" groups=["inimigo"]]
script = ExtResource("1_xbdp6")
move_speed = 25.0

[node name="DoesDamage" type="Area2D" parent="."]
script = ExtResource("2_2vgpq")
damagable_group = "player"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoesDamage"]
position = Vector2(7, -1)
shape = SubResource("CircleShape2D_0en68")

[node name="Sprite2D" type="Sprite2D" parent="DoesDamage"]
position = Vector2(7, -1)
scale = Vector2(0.347501, 0.350681)
texture = ExtResource("3_s72fp")

[node name="Damageable" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_blfyr")
script = ExtResource("2_af5me")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_exalh")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1csb3")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1csb3")
}
tree_root = SubResource("AnimationNodeStateMachine_cr6cv")
anim_player = NodePath("../AnimationPlayer")

[node name="WalkTimer" type="Timer" parent="."]
autostart = true

[node name="CombatLifeController" type="Node" parent="."]
script = ExtResource("4_28gnd")
